# mcp-servers

./: .gitignore
m365.email/: pyproject.toml
m365.email/src/m365-email-mcp/: main.py
m365.users/: pyproject.toml
m365.users/src/m365-users-mcp/: main.py
math/: README.md  add.sh  math-mcp.toml  pyproject.toml
math/src/math/: server.py
math/src/mathmcp/: server.py
weather/: pyproject.toml
